# VoxEngine

./: CMakeLists.txt  README.md
shaders/: chunkShader.fs  chunkShader.vs  shader.fs  shader.vs
src/: camera.cpp  camera.hpp  filesystem.hpp  main.c  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
